--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,6 @@ jobs:
       with:
         targets: ""
         override-deps: |
-        args: "-c .ansible-lint"
+          ansible==2.9
+          ansible-lint==4.2.0
+        args: ""
