Updated to include base chages

--- a/roles/apps/tasks/main.yml
+++ b/roles/apps/tasks/main.yml
@@ -1,31 +1,26 @@
 ---
-- name: get the username running the deploy
-  become: false
-  delegate_to: localhost
-  command: whoami
-  register: local_user
-
 # Setup Alacritty and make it the default Terminal in Gnome
 - name: Create a directory if it does not exist
   file:
-    become_user: "{{ local_user }}"
-    path: /home/{{ local_user }}/.config/alacritty
+    path: /home/"{{ local_user }}"/.config/alacritty
     state: directory
+    owner: "{{ local_user }}"
+    group: "wheel"
     mode: '0755'
 
 - name: Template alacritty.yml
   copy:
     src: templates/alacritty.yml
-    dest: /home/{{ local_user }}/.config/alacritty/alacritty.yml
+    dest: /home/"{{ local_user }}"/.config/alacritty/alacritty.yml
     owner: "{{ local_user }}"
-    group: wheel
+    group: "wheel"
     mode: '0644'
 
 # Setup Starship prompt config
 - name: Template starship.toml
   copy:
     src: templates/starship.toml
-    dest: /home/{{ local_user }}/.config/starship.toml
+    dest: /home/"{{ local_user }}"/.config/starship.toml
     owner: "{{ local_user }}"
     group: wheel
     mode: '0644'
@@ -34,7 +29,7 @@
 - name: Template .zshrc
   copy:
     src: templates/zshrc
-    dest: /home/{{ local_user }}/.zshrc
+    dest: /home/"{{ local_user }}"/.zshrc
     owner: "{{ local_user }}"
     group: wheel
     mode: '0600'
