--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -27,6 +27,8 @@ Vagrant.configure("2") do |config|
   
   config.vm.provision "shell", inline: <<-SHELL
     pacman -Syyu --noconfirm 
+    pacman -Syy --noconfirm ansible
     git clone https://github.com/mtharpe/ansible-manjaro-workstation-base.git /home/vagrant/ansible-manjaro-workstation-base
+    cd /home/vagrant/ansible-manjaro-workstation-base && ansible-playbook site.yml
   SHELL
 end
