--- a/roles/gnome/tasks/main.yml
+++ b/roles/gnome/tasks/main.yml
@@ -57,6 +57,12 @@
       v: "false"
     - k: "/org/gnome/settings-daemon/plugins/color/night-light-schedule-automatic"
       v: "false"
+    - k: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/name"
+      v: "'File Explorer'"
+    - k: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/command"
+      v: "'nautilus --new-window'"
+    - k: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/binding"
+      v: "'<Super>e'"
 
 - name: Setup Gnome Terminal
   shell: "{{ item }}"
