--- a/roles/gnome/tasks/main.yml
+++ b/roles/gnome/tasks/main.yml
@@ -76,3 +76,15 @@
     - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ scrollbar-policy never"
     - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ use-custom-command true"
     - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ custom-command /usr/bin/tmux"
+
+- include_tasks: main_extension.yml
+  vars:
+    gnome_extension_ids:
+    - 906
+    - 4099
+    - 16
+    - 4158
+    - 4052
+    - 615
+    - 4135
+    - 2594
