Update to include PIP

--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -73,6 +73,7 @@
     - wavpack
     - x264
     - xvidcore
+    - python-pip
 
 - name: Remove common desktop packages
   pacman:
@@ -106,3 +107,6 @@
 
 - name: Restart vbox
   command: vboxreload
+
+- name: Install PIP modules
+  command: pip install termcolor
