Added google calendar from AUR to make sure notifications work

--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -75,6 +75,7 @@
     - x264
     - xvidcore
     - python-pip
+    - google-calendar-nativefier
 
 - name: Remove common desktop packages
   pacman:
