--- a/roles/gnome/tasks/main_extension.yml
+++ b/roles/gnome/tasks/main_extension.yml
@@ -6,7 +6,8 @@
   register: r_gnome_extension_parse_shell_version
   changed_when: no
 
-- set_fact:
+- name: Set gnome_shell_version fact
+  set_fact:
     gnome_shell_version: "{{ r_gnome_extension_parse_shell_version.stdout }}"
 
 - name: Get Gnome Shell extension info
