--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -109,13 +109,12 @@
 
 - name: Disable Google Calendar Built-in icon
   become: yes
-  command: mv /usr/share/applications/google-calendar-nativefier.desktop /usr/share/applications/google-calendar-nativefier.desktop.not
+  command: mv /usr/share/applications/google-calendar-nativefier.desktop /usr/share/applications/google-calendar-nativefier.desktop.not || true
 
 - name: Disable Alacritty Built-in icon
   become: yes
-  command: mv /usr/share/applications/Alacritty.desktop /usr/share/applications/Alacritty.desktop.not
+  command: mv /usr/share/applications/Alacritty.desktop /usr/share/applications/Alacritty.desktop.not || true
 
 - name: Disable Gnome-Terminal Built-in icon
   become: yes
-  command: mv /usr/share/applications/org.gnome.Terminal.desktop /usr/share/applications/org.gnome.Terminal.desktop.not
-
+  command: mv /usr/share/applications/org.gnome.Terminal.desktop /usr/share/applications/org.gnome.Terminal.desktop.not || true
