--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -107,14 +107,32 @@
 - name: Install PIP modules
   command: pip install termcolor
 
+- name: Stat GCal Desktop Icon
+  stat: 
+    path: /usr/share/applications/google-calendar-nativefier.desktop
+  register: gcal_stat
+
 - name: Disable Google Calendar Built-in icon
   become: yes
   command: mv /usr/share/applications/google-calendar-nativefier.desktop /usr/share/applications/google-calendar-nativefier.desktop.not || true
+  when: gcal_stat.stat.exists
+
+- name: Stat Alacritty Desktop Icon
+  stat:
+    path: /usr/share/applications/Alacritty.desktop
+  register: alacritty_stat
 
 - name: Disable Alacritty Built-in icon
   become: yes
   command: mv /usr/share/applications/Alacritty.desktop /usr/share/applications/Alacritty.desktop.not || true
+  when: alacritty_stat.stat.exists
+
+- name: Stat Gnome Terminal Desktop Icon
+  stat:
+    path: /usr/share/applications/org.gnome.Terminal.desktop
+  register: gnome_terminal_stat
 
 - name: Disable Gnome-Terminal Built-in icon
   become: yes
   command: mv /usr/share/applications/org.gnome.Terminal.desktop /usr/share/applications/org.gnome.Terminal.desktop.not || true
+  when: gnome_terminal_stat.stat.exists
