--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -7,7 +7,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
-    vb.memory = "4096"
+    vb.memory = "2048"
+    vb.cpus = 2
   end
   
   config.vm.provision "shell", inline: <<-SHELL
