--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -111,3 +111,8 @@
   
 - name: Install PIP modules
   command: pip install termcolor
+
+- name: Start and Enable Auto-CPUFREQ
+  service:
+    name: auto-cpufreq
+    state: started
