--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,5 +13,6 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-SHELL
     pacman -Syyu --noconfirm 
     git clone https://github.com/mtharpe/ansible-manjaro-workstation-base.git /home/vagrant/ansible-manjaro-workstation-base
+    cd ansible-manjaro-workstation-base && ./run.sh
   SHELL
 end
