--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -7,12 +7,12 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
-    vb.memory = "4096"
+    vb.memory = "2048"
   end
   
   config.vm.provision "shell", inline: <<-SHELL
     pacman -Syyu --noconfirm 
     git clone https://github.com/mtharpe/ansible-manjaro-workstation-base.git /home/vagrant/ansible-manjaro-workstation-base
-    cd ansible-manjaro-workstation-base && sh vagrant_run.sh
+    # cd ansible-manjaro-workstation-base && sh vagrant_run.sh
   SHELL
 end
