--- a/roles/apps/templates/gnome_desktop/gcal.desktop
+++ b/roles/apps/templates/gnome_desktop/gcal.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Google Calendar
 Comment=Google Calendar 
 Exec=google-calendar-nativefier
-Icon=/home/tharpem/Pictures/icons/gcal.png
+Icon="~/Pictures/icons/gcal.png"
 Terminal=false
 StartupNotify=false
 Categories=Network;Office;Calendar;;
