--- a/roles/apps/templates/gnome_desktop/gmail.desktop
+++ b/roles/apps/templates/gnome_desktop/gmail.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Type=Application
 Name=Google Mail
-Icon=/home/tharpem/Pictures/icons/gmail.png
+Icon="~/Pictures/icons/gmail.png"
 Exec=/home/tharpem/Applications/GoogleMail-linux-x64/GoogleMail
 Comment=Google Mail Client
 Categories=Google;
