Update to night mode

--- a/roles/gnome/tasks/main.yml
+++ b/roles/gnome/tasks/main.yml
@@ -59,6 +59,10 @@
       v: "false"
     - k: "/org/gnome/settings-daemon/plugins/color/night-light-schedule-automatic"
       v: "false"
+    - k: "/org/gnome/settings-daemon/plugins/color/night-light-enabled"
+      v: "false"
+    - k: "/ca/desrt/dconf-editor/automatic-night-mode"
+      v: "false"
     - k: "/org/gnome/shell/weather/automatic-location"
       v: "true"
     - k: "/org/gnome/shell/favorite-apps"
