--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,13 +6,12 @@ Vagrant.configure("2") do |config|
   config.vm.box_check_update = true
 
   config.vm.provider "virtualbox" do |vb|
-    vb.gui = false
+    vb.gui = true
     vb.memory = "2048"
   end
   
   config.vm.provision "shell", inline: <<-SHELL
     pacman -Syyu --noconfirm 
     git clone https://github.com/mtharpe/ansible-manjaro-workstation-base.git /home/vagrant/ansible-manjaro-workstation-base
-    # cd ansible-manjaro-workstation-base && sh vagrant_run.sh
   SHELL
 end
